syntax = "proto3";
package pb.v1;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
}

message LogoutRequest {}

message LogoutResponse {
  bool success = 1;
  string message = 2;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

message CreateUserResponse {
  bool success = 1;
  string message = 2;
}

message GetUserRequest {
  int64 id = 1;
  string email = 2;
}

message User {
  int64 id = 1;
  string email = 2;
  string password = 3;
}

message GetUserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}